# forma

./: .gitignore  CMakeLists.txt  DesignLanguage.md
.claude/: settings.local.json
Presa/: CMakeLists.txt  Presa.entitlements
Presa/Source/: CaptureBuffer.cpp  CaptureBuffer.h  FormaLookAndFeel.cpp  FormaLookAndFeel.h  FormaPalette.h  PadGrid.cpp  PadGrid.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  StateDotField.cpp  StateDotField.h  WaveformDisplay.cpp  WaveformDisplay.h
Presa/Source/capture/: LoopbackCapture.h  LoopbackCapture_Mac.cpp  LoopbackCapture_Win.cpp  ScreenCaptureAudio.h  ScreenCaptureAudio.mm
Presa/Source/fx/: AmbientEngine.cpp  AmbientEngine.h  AnalogDelay.cpp  AnalogDelay.h  DegradeProcessor.cpp  DegradeProcessor.h  FXChain.cpp  FXChain.h  FilterModule.cpp  FilterModule.h  ReverbModule.cpp  ReverbModule.h  TapeSaturator.cpp  TapeSaturator.h
Presa/Source/sampler/: SamplePlayer.cpp  SamplePlayer.h
Resources/: forma_suggestions.json  voice_leading_weights.json
Resources/packs/bright_lights/: crest_zone1.json  crest_zone2.json  crest_zone3.json  crest_zone4.json  nocturne_zone1.json  nocturne_zone2.json  nocturne_zone3.json  pack_index.json  shimmer_zone1.json  shimmer_zone2.json  shimmer_zone3.json  static_zone1.json  static_zone2.json  static_zone3.json
Resources/zones/: bright_zone1.json  bright_zone2.json  bright_zone3.json  bright_zone4.json  deep_zone1.json  deep_zone2.json  deep_zone3.json  deep_zone4.json  dream_zone1.json  dream_zone2.json  dusk_zone1.json  dusk_zone2.json  dusk_zone3.json  dusk_zone4.json  hollow_zone1.json  hollow_zone2.json  hollow_zone3.json  tender_zone1.json  tender_zone2.json  tender_zone3.json  tense_zone1.json  tense_zone2.json  tense_zone3.json  warm_zone1.json  warm_zone2.json  warm_zone3.json  zones_index.json
Source/: Arpeggiator.cpp  Arpeggiator.h  BassEngine.cpp  BassEngine.h  FormaSynth.h  FormaSynthPresets.h  HarmonyEngine.cpp  HarmonyEngine.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SuggestionEngine.cpp  SuggestionEngine.h  TestHarmony.cpp  VoiceLeadingWeights.h
